Add links to new packages and remove obsolete packages.

--- a/configure.ac
+++ b/configure.ac
@@ -73,47 +73,27 @@ pkg_list="$pkg_list $2"
 
 # List packages.
 JRL_GENERATELINK([KWSPLUS], [kwsPlus])
-JRL_GENERATELINK([HPPMODEL], [hppModel])
-JRL_GENERATELINK([HPPCORE], [hppCore])
-JRL_GENERATELINK([WALKGENJRL], [walkGenJrl])
+JRL_GENERATELINK([HPPMODEL], [hpp-model])
+JRL_GENERATELINK([HPPCORE], [hpp-core])
+JRL_GENERATELINK([WALKGENJRL], [jrl-walkgen])
 JRL_GENERATELINK([HPPCORBASERVER], [hpp-corbaserver])
-JRL_GENERATELINK([HPPPYTHON], [hpp-python])
 JRL_GENERATELINK([HPPWALKFOOTPLANNER], [hpp-walkfootplanner])
 JRL_GENERATELINK([HPPWALKPLANNER], [hpp-walkplanner])
-JRL_GENERATELINK([HPPHYBRIDROBOT], [hppHybridRobot])
-JRL_GENERATELINK([HPPHRPPLANNER], [hppHRPPlanner])
-JRL_GENERATELINK([HPPCMPPLANNER], [hppCmpPlanner])
-JRL_GENERATELINK([HPPTUTORIALPLANNER], [hppTutorialPlanner])
-JRL_GENERATELINK([KPPINTERFACE], [kppInterface])
+JRL_GENERATELINK([KPPINTERFACE], [kpp-interface])
 JRL_GENERATELINK([KPPINTERFACEWALK], [kpp-interfacewalk])
-JRL_GENERATELINK([KPPINTERFACEHRP], [kppInterfaceHRP])
-JRL_GENERATELINK([KPPINTERFACECMP], [kppInterfaceCmp])
 JRL_GENERATELINK([HPPGIK], [hpp-gik])
-JRL_GENERATELINK([HPPHIK], [hpp-hik])
-JRL_GENERATELINK([HPPLOA], [hppLoa])
-JRL_GENERATELINK([HPPLOCALSTEPPER], [hpp-localstepper])
-JRL_GENERATELINK([HPPLOAPLANNER], [hppLoaPlanner])
-JRL_GENERATELINK([HPPTIMINGPLANNER], [hppTimingPlanner])
-JRL_GENERATELINK([DYNAMICSJRLJAPAN], [dynamicsJRLJapan])
-JRL_GENERATELINK([ABSTRACTROBOTDYNAMICS], [abstractRobotDynamics])
-JRL_GENERATELINK([ABSTRACTGIKTASK], [abstractGikTask])
-JRL_GENERATELINK([KPPINTERFACETUTORIAL], [kppInterfaceTutorial])
-JRL_GENERATELINK([HPPOPENHRP], [hppOpenHRP])
-JRL_GENERATELINK([HPPVISUALIZEMOVEPLANNER], [hppVisualizeMovePlanner])
-JRL_GENERATELINK([SLAM3DPLANNER], [slam3DPlanner])
-JRL_GENERATELINK([HPPDYNAMICOBSTACLE], [hppDynamicObstacle])
-JRL_GENERATELINK([WORLDMODELGRID3D], [worldModelGrid3D])
-JRL_GENERATELINK([HRP2DYNAMICS], [hrp2Dynamics])
-JRL_GENERATELINK([HPPWALKPLANNERCOMPSPEC], [hppWalkPlannerCompSpec])
-JRL_GENERATELINK([WALKPLANNERORTM], [walkPlannerOrtm])
-JRL_GENERATELINK([WALKPLANNERORTMCLIENT], [walkPlannerOrtmClient])
+JRL_GENERATELINK([DYNAMICSJRLJAPAN], [jrl-dynamics])
+JRL_GENERATELINK([ABSTRACTROBOTDYNAMICS], [abstract-robot-dynamics])
+JRL_GENERATELINK([ABSTRACTGIKTASK], [abstract-gik-task])
+JRL_GENERATELINK([HRP2DYNAMICS], [hrp2-dynamics])
 JRL_GENERATELINK([ROBOPTIMCORE], [roboptim-core])
-JRL_GENERATELINK([ROBOPTIMPOSTURE], [roboptim-posture])
 JRL_GENERATELINK([ROBOPTIMTRAJECTORY], [roboptim-trajectory])
-JRL_GENERATELINK([SOT], [StackOfTasks])
-
-JRL_GENERATELINK([WALKGENOM], [walk-genom])
-
+JRL_GENERATELINK([HPPROBOPTIM], [hpp-roboptim])
+JRL_GENERATELINK([HPPCONSTRAINED], [hpp-constrained])
+JRL_GENERATELINK([HPPCONSTRAINEDPLANNER], [hpp-constrained-planner])
+JRL_GENERATELINK([HPPWHOLEBODYSTEPPLANNER], [hpp-wholebody-step-planner])
+JRL_GENERATELINK([HPPWHOLEBODYSTEPCORBA], [hpp-wholebody-step-corba])
+JRL_GENERATELINK([KPPINTERFACESTEP], [kpp-interfacestep])
 
 # Generate the list of html stub pages for missing packages that
 # will be generated.
