--- a/doc/algorithm.html.in
+++ b/doc/algorithm.html.in
@@ -10,41 +10,6 @@
   <body>
     <h1>Packages implementing algorithms</h1>
 
-    <h3>Dynamics and Control</h3>
-
-    <table class="pkglist">
-      <tr>
-	<td><a href="@ABSTRACTROBOTDYNAMICS_LINK@">abstract-robot-dynamics</a></td>
-	<td>abstract interface for robot dynamic model</td>
-      </tr>
-
-      <tr>
-	<td><a href="@DYNAMICSJRLJAPAN_LINK@">jrl-dynamics</a></td>
-	<td>JRL Implementation of robot dynamic model</td>
-      </tr>
-
-      <tr>
-	<td><a href="@WALKGENJRL_LINK@">jrl-walkgen</a></td>
-	<td>JRL Walk Pattern Generator</td>
-      </tr>
-
-      <tr>
-	<td><a href="@ABSTRACTGIKTASK_LINK@">abstract-gik-task</a></td>
-	<td>Abstract interface for whole body motion planning.</td>
-      </tr>
-
-      <tr>
-	<td><a href="@HPPGIK_LINK@">hpp-gik</a></td>
-	<td>Implementation of whole body motion planning.</td>
-      </tr>
-
-      <tr>
-	<td><a href="@HRP2DYNAMICS_LINK@">hrp2-dynamics</a></td>
-	<td>Optimized dynamic model for HRP2.</td>
-      </tr>
-
-    </table>
-
     <h3>RobOptim: optimization for robotics</h3>
     <table class="pkglist">
       <tr>
@@ -59,28 +24,10 @@
 
     <h3>Motion planning for humanoid systems</h3>
 
-    <p>
-      Packages marked by <img src="images/kineo.jpg" alt="require Kineo
-							    SDK"> depend on <a href="http://www.kineocam.com/">KineoWorks SDK</a>.
-    </p>
 
     <table class="pkglist">
-      <li><b>General functionalities</b></li>
+      <li><b>Kinematic chain with geometry</b></li>
       <table class="pkglist">
-	<tr>
-	  <td>
-	    <a href="@KWSPLUS_LINK@">kwsPlus</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>extension to KineoWorks (cart-like steering method) </td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPGEOMETRY_LINK@">hpp-geometry</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>Extension of KCD: implements capsule geometry.</td>
-	</tr>
 	<tr>
 	  <td>
 	    <a href="@HPPMODEL_LINK@">hpp-model</a>
@@ -88,6 +35,10 @@
 	  </td>
 	  <td>implementation of hybrid geometric and dynamic robot.</td>
 	</tr>
+      </table>
+
+      <li><b>Path planning</b></li>
+      <table class="pkglist">
 	<tr>
 	  <td>
 	    <a href="@HPPCORE_LINK@">hpp-core</a>
@@ -95,30 +46,15 @@
 	  </td>
 	  <td>definition of basic classes. </td>
 	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPROBOPTIM_LINK@">hpp-roboptim</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>Bridge between roboptim and hpp.</td>
-	</tr>
       </table>
 
-      <li><b>Path Planning with non-linear constraints</b></li>
+      <li><b>Non linear constraints</b></li>
       <table class="pkglist">
 	<tr>
 	  <td>
-	    <a href="@HPPCONSTRAINED_LINK@">hpp-constrained</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
+	    <a href="@HPPCONSTRAINTS_LINK@">hpp-constraints</a>
 	  </td>
 	  <td>Motion planning for systems subject to nonlinear constraints</td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPCONSTRAINEDPLANNER_LINK@">hpp-constrained-planner</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>Planner for systems subject to nonlinear constraints</td>
 	</tr>
       </table>
 
@@ -126,22 +62,7 @@
       <table class="pkglist">
 	<tr>
 	  <td>
-	    <a href="@HPPWALKFOOTPLANNER_LINK@">hpp-walkfootplanner</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>Foot step planning along a bounding box trajectory. </td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPWALKPLANNER_LINK@">hpp-walkplanner</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
-	  </td>
-	  <td>Walk planning for a humanoid robot among obstacles. </td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPWHOLEBODYSTEPPLANNER_LINK@">hpp-wholebody-step-planner</a>
-	    <img src="images/kineo.jpg" alt="require Kineo SDK" style="kineo">
+	    <a href="@HPPWHOLEBODYSTEP_LINK@">hpp-wholebody-step</a>
 	  </td>
 	  <td>Whole-body and walk planning using sliding path approximation.</td>
 	</tr>
