--- a/doc/main.html.in
+++ b/doc/main.html.in
@@ -25,12 +25,8 @@
 
 HPP (Humanoid Path Planner) is a collection of software packages
 implementing path planning functionalities for a humanoid robot.
-Global motion planning algorithms are built upon KineoWorks (KWS) and
-KineoPathPlanner-SDK (KPP-SDK), commercial software products marketed
-by <a href="http://www.kineocam.com">Kineo CAM</a>.
-<p>
-However, many basic software modules (dynamic model, walk pattern generator,...)
-are independent of the above commercial products.
+
+The core functionalities are well suited to solve classical path planning problems.
 
 It can be extended to path planning for other types of robots like digital actors for instance.
 
@@ -38,38 +34,14 @@ It can be extended to path planning for other types of robots like digital actor
 <h2> Organization of the packages </h2>
 
 <p>The code relative to HPP is distributed into several software
-packages handled by
-the <a href="http://www.gnu.org/software/autoconf">Autotools</a>
-or <a href="http://www.cmake.org">CMake</a>.</p>
+packages handled by <a href="http://www.cmake.org">CMake</a>.</p>
 
 <p>The packages are distributed into the following categories:</p>
 <ul>
 <li><a href="algorithm.html">Algorithms</a> implementing path planning functionalities</li>
 <li><a href="corba.html">Corba</a> communication facilities to control algorithms</li>
-<li><a href="kpp-interface.html">Add-on</a> to KineoPathPlanner GUI interface</li>
-<li>Robotic components encapsulating HPP algorithms</li>
 </ul>
 
-<h2>A few examples</h2>
-
-Here are a few examples of problems solved by HPP packages.
-
-<h3>Walk planning</h3>
-
-To move on a flat ground cluttered with obstacles, the best strategy is to walk. To solve this problem, we plan a motion for the bounding box of the robot with cart-like kinematics and then animate the path of the box using a walk pattern generator.
-
-<p>
-<center>
-<img src="images/walk.png" width="40%">
-</center>
-
-<hr>
- <center>
-   <img src="./images/footer.jpg" Height=100>
- <br>Humanoid Path Planner documentation</br>
- </center>
- <hr>
-</center>
 </body>
 </html>
 
