Add a link to hpp-model-urdf.

--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,7 @@ pkg_list="$pkg_list $2"
 
 # List packages.
 JRL_GENERATELINK([HPPMODEL], [hpp-model])
+JRL_GENERATELINK([HPPMODELURDF], [hpp-model-urdf])
 JRL_GENERATELINK([HPPCORE], [hpp-core])
 JRL_GENERATELINK([HPPCORBASERVER], [hpp-corbaserver])
 JRL_GENERATELINK([ROBOPTIMCORE], [roboptim-core])
