--- a/doc/Makefile
+++ b/doc/Makefile
@@ -89,6 +89,9 @@ robot_state_chain_publisher_repository=${HPP_REPO}
 iai_maps_branch=master
 iai_maps_repository=${HPP_REPO}
 
+hpp_tutorial_branch=master
+hpp_tutorial_repository=${HPP_REPO}
+
 all: hpp_ros.install hpp-wholebody-step-corba.install
 	${MAKE} hpp-doc.install
 # source $DEVEL_DIR/install/setup.bash before installing hrp2.
@@ -134,6 +137,8 @@ airbus_ros.configure.dep: airbus_environment.install \
 airbus_environment.configure.dep: hpp_ros.install airbus_environment.checkout
 robot_state_chain_publisher.configure.dep: robot_state_chain_publisher.checkout
 iai_maps.configure.dep: robot_state_chain_publisher.install iai_maps.checkout
+hpp_tutorial.configure.dep: iai_maps.install hpp-corbaserver.install \
+	hpp_ros.install hpp_tutorial.checkout
 
 status:
 	for d in eigen3 fcl jrl-mathtools hpp-util roboptim-core roboptim-trajectory hpp-model hpp-model-urdf hpp-core hpp-template-corba hpp-corbaserver hpp-constraints hpp-wholebody-step hpp-wholebody-step-corba hpp_ros hpp-manipulation hpp-manipulation-corba airbus_ros airbus_environment hpp-doc ; do \
