Use https url for github.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -4,9 +4,9 @@
 #
 
 FCL_REPO=https://github.com/flexible-collision-library
-JRL_REPO=git@github.com:jrl-umi3218
-LAAS_REPO=git@github.com:laas
-HPP_REPO=git@github.com:humanoid-path-planner
+JRL_REPO=https://github.com/jrl-umi3218
+LAAS_REPO=https://github.com/laas
+HPP_REPO=https://github.com/humanoid-path-planner
 
 SRC_DIR=${DEVEL_DIR}/src
 BUILD_TYPE=Debug
